--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
         Os administradores dos grupos Amigos do Bairro e Negócios do Bairro não têm nada a ver com as escolhas pessoais dos profissionais listados, que são gentilmente indicados pelos vizinhos.
 
-        Porém, se houver algum problema com um profissional, podem entrar em contato comigo, para que eu tire do banco de dados. E, se o profissional não atende mais, por favor, avisem também. @Janete
+        Porém, se houver algum problema com um profissional, podem entrar em contato comigo, para que eu tire do banco de dados. E, se o profissional não atende mais, por favor, avisem também. @Pedro Ribeiro
       </div>
       <button onclick="acceptDisclaimer()">Entendi e Aceito</button>
     </div>
